Fix balloon visible even if no update available, fix edit container toggle

--- a/internal/webui/public/assets/css/custom.css
+++ b/internal/webui/public/assets/css/custom.css
@@ -93,8 +93,6 @@
 }
 
 #update-available {
-  display: inline-block;
-  /* Make sure the span is transformable */
   animation: wiggle 1s ease-in-out infinite;
 }
 
